welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:9: error: not found: value Direction
  if (getDirection()==Direction.EAST) {
                      ^